Fix: remove white space between photos in gallery in small screens

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,4 +1,5 @@
 /* Home page */
+
 @media (max-width: 800px) {
   nav img {
     width: 80px;
@@ -24,6 +25,7 @@
   }
 }
 /* Contact us page  */
+
 @media (max-width: 500px) {
   .contact-us {
     padding: 0 40px !important;
@@ -58,14 +60,14 @@
     width: 100%;
     padding: 0% 4%;
     box-sizing: border-box;
-    height: 160vh;
+    height: 136vh;
   }
   .container2 {
     display: block;
     width: 100%;
     padding: 0% 4%;
     box-sizing: border-box;
-    height: 170vh;
+    height: 150vh;
   }
 
   .photos img:hover {
